--- a/html/composer.json
+++ b/html/composer.json
@@ -15,6 +15,7 @@
         "cakephp/bake": "^2.6",
         "cakephp/cakephp-codesniffer": "^4.5",
         "cakephp/debug_kit": "^4.5",
+        "friendsofphp/php-cs-fixer": "^3.11",
         "josegonzalez/dotenv": "^3.2",
         "phpunit/phpunit": "~8.5.0 || ^9.3"
     },
